--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\"",
-    "build": "tsc"
+    "start": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,9 +14,10 @@
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/pg": "^7.14.5",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.5"
   },
   "dependencies": {
+    "@types/node": "^14.14.7",
     "bcrypt": "^5.0.0",
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
@@ -26,6 +27,10 @@
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.4.1"
+    "pg": "^8.4.1",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5",
+    "@types/express": "^4.17.8",
+    "@types/pg": "^7.14.5"
   }
 }
