--- a/package.json
+++ b/package.json
@@ -17,20 +17,21 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
+    "@types/express": "^4.17.8",
     "@types/node": "^14.14.7",
+    "@types/pg": "^7.14.5",
     "bcrypt": "^5.0.0",
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
+    "nodemailer": "^6.4.16",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.4.1",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.5",
-    "@types/express": "^4.17.8",
-    "@types/pg": "^7.14.5"
+    "typescript": "^4.0.5"
   }
 }
