--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/pg": "^7.14.5",
     "bcrypt": "^5.0.0",
     "concurrently": "^5.3.0",
+    "email-templates": "^7.1.2",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
@@ -31,6 +32,7 @@
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.4.1",
+    "pug": "^3.0.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   }
