--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
     "nodemailer": "^6.4.16",
+    "nodemailer-html-to-text": "^3.1.0",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
