--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/pg": "^7.14.5",
     "bcrypt": "^5.0.0",
     "concurrently": "^5.3.0",
+    "cors": "^2.8.5",
     "email-templates": "^7.1.2",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
