--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
+    "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.4.16",
     "nodemailer-html-to-text": "^3.1.0",
     "nodemon": "^2.0.6",
