--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"tsc -w\" \"nodemon build/index.js\"",
+    "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\"",
     "start": "ts-node src/index.ts"
   },
   "keywords": [],
